Add ability to draw lines

--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -12,7 +12,13 @@
   opacity: 40%;
 }
 
-.isSelected {
+rect.isSelected,
+ellipse.isSelected,
+text.isSelected {
+  outline: 2px dashed lightblue;
+}
+
+polyline.isSelected {
   outline: 2px dashed lightblue;
 }
 
