--- a/src/components/Properties/Properties.css
+++ b/src/components/Properties/Properties.css
@@ -7,3 +7,20 @@
   background-color: lightcyan;
   padding: 5px 10px;
 }
+
+.color-btn {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+  border: none;
+  border-radius: 2px;
+}
+
+.transparent {
+  background-image: linear-gradient(45deg, #808080 25%, transparent 25%),
+    linear-gradient(-45deg, #808080 25%, transparent 25%),
+    linear-gradient(45deg, transparent 75%, #808080 75%),
+    linear-gradient(-45deg, transparent 75%, #808080 75%);
+  background-size: 10px 10px;
+  background-position: 0 0, 0 5px, 5px -5px, -5px 0px;
+}
