--- a/src/components/Properties/Properties.css
+++ b/src/components/Properties/Properties.css
@@ -11,9 +11,13 @@
 .color-btn {
   width: 20px;
   height: 20px;
-  margin-right: 5px;
+  margin-right: 6px;
   border: none;
   border-radius: 2px;
+}
+
+.active {
+  outline: 3px dashed skyblue;
 }
 
 .transparent {
