--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -1,7 +1,9 @@
 .canvas {
-  height: 100%;
-  width: 100%;
+  height: 1000px;
+  width: 2000px;
   position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .isAdding {
