--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -36,7 +36,7 @@ polyline.isSelected {
 .textInput {
   background-color: transparent;
   border: none;
-  color: #fff !important;
+  color: rgb(197, 197, 197) !important;
   font-size: 14px;
   font-weight: bold;
   width: 100%;
