--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -20,11 +20,9 @@ text.isSelected {
   outline: 2px dashed lightblue;
 }
 
-polyline.isSelected {
-  outline: 2px dashed lightblue;
-}
-
-.isHovering {
+rect.isHovering,
+ellipse.isHovering,
+text.isHovering {
   outline: 1px dashed rgba(173, 216, 230, 0.7);
 }
 
