--- a/src/components/Canvas/Canvas.css
+++ b/src/components/Canvas/Canvas.css
@@ -42,9 +42,9 @@ text.isHovering {
 .textInput {
   background-color: transparent;
   border: none;
-  color: rgb(197, 197, 197) !important;
+  color: black !important;
   font-size: 14px;
-  font-weight: bold;
+  font-family: "Kalam";
   width: 100%;
   height: 100%;
   outline: none;
