--- a/client/src/components/Canvas/Canvas.css
+++ b/client/src/components/Canvas/Canvas.css
@@ -35,6 +35,10 @@ text.isHovering {
 .textContainer {
   width: 100%;
   height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .textInput {
@@ -44,13 +48,10 @@ text.isHovering {
   font-size: 14px;
   font-family: "Kalam";
   width: 100%;
-  height: 100%;
   outline: none;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
   text-align: center;
+  resize: none;
+  overflow: hidden;
   /* white-space: pre; Needed in order to get the newlines to appear */
 }
 
